# uni-cli

./: .gitignore  AGENTS.md  LICENSE  README.md  ruff.toml
.github/workflows/: ci.yml  release.yml
bench/: AGENTS.md
bench/data/: scenarios.mock.json  scenarios.real.json  scenarios.real.template.json  scenarios.real.trust.json
bench/data/mocks/: mock_unity.py
bench/reports/: final-benchmark-report.md  mock-latest.json  mock-latest.md  real-latest.json  real-latest.md  real-trust-latest.json  real-trust-latest.md  real-trust-smoke.json  schema-overhead.json  tier1-corrected.json  tier2-e2e.json  tier3-schema-overhead.json
bench/scripts/: analyze_schema_overhead.py  bench_scene_helper.py  e2e_policy_engine.py  e2e_task_defs.py  mcp_real_scenario.py  run_benchmark.py  run_e2e_benchmark.py  run_real_benchmark.py  verify_tools_load_test.py
bench/scripts/setup/: check_env.sh  prepare_project.sh  smoke_mcp_http.sh  start_mcp_http.sh
cli/: AGENTS.md  README.md  pyproject.toml
cli/src/uni_cli/: __init__.py  main.py
cli/src/uni_cli/commands/: asset.py  batch.py  hierarchy.py  object.py  subsystem.py
cli/src/uni_cli/formatter/: __init__.py  compact.py
cli/src/uni_cli/transport/: __init__.py  mcp_client.py  server_manager.py
cli/tests/: conftest.py  helpers.py  test_commands.py  test_formatter.py  test_main.py  test_transport.py
docs/: benchmark-design.md  cli-output-contract.md  e2e-agent-benchmark-design.md  result-report-template.md  unity-mcp-setup.md
docs/tasks/: 01-readme-update.md  02-unity-load-test.md  03-cli-tests.md  04-github-actions-ci.md  05-pypi-publish.md  06-release-workflow.md
package/: package.json
package/Editor/: StdioBridgeAutoStart.cs  com.uni-cli.tools.Editor.asmdef
package/Editor/Tools/: ManageAddressables.cs  ManageDOTS.cs  ManageShaderGraph.cs  ManageUIToolkit.cs
package/Runtime/: com.uni-cli.tools.Runtime.asmdef
unity-project/Assets/BenchScenes/: Bench_Mat_001.mat  Bench_Mat_002.mat  Bench_Mat_003.mat  Bench_Mat_004.mat  Bench_Mat_005.mat  Bench_Mat_006.mat  Bench_Mat_007.mat  Bench_Mat_008.mat  Bench_Mat_009.mat  Bench_Mat_010.mat  Bench_Mat_011.mat  Bench_Mat_012.mat  Bench_Mat_013.mat  Bench_Mat_014.mat  Bench_Mat_015.mat  Bench_Mat_016.mat  Bench_Mat_017.mat  Bench_Mat_018.mat  Bench_Mat_019.mat  Bench_Mat_020.mat  LargeBench.unity  MediumBench.unity  SmallBench.unity
unity-project/ProjectSettings/: ProjectSettings.asset  TagManager.asset
(+52 files in other folders)
